# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "7816/wm_7816.c",
    "adc/wm_adc.c",
    "cpu/wm_cpu.c",
    "dma/wm_dma.c",
    "efuse/wm_efuse.c",
    "flash/wm_fls.c",
    "flash/wm_fls_gd25qxx.c",
    "gpio/wm_gpio.c",
    "gpio/wm_gpio_afsel.c",
    "i2c/wm_i2c.c",
    "i2s/wm_i2s.c",
    "internalflash/wm_internal_fls.c",
    "io/wm_io.c",
    "irq/wm_irq.c",
    "pmu/wm_pmu.c",
    "psram/wm_psram.c",
    "pwm/wm_pwm.c",
    "rtc/wm_rtc.c",
    "sasc/wm_sasc.c",
    "spi/wm_hostspi.c",
    "timer/wm_timer.c",
    "uart/wm_uart.c",
    "watchdog/wm_watchdog.c",
  ]
  include_dirs = [ "spi" ]
}
