# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_switch = defined(LOSCFG_HALS_COMMUCATION_WIFI_LITE)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "blehost/ext/tinycrypt/src/aes_decrypt.c",
    "blehost/ext/tinycrypt/src/aes_encrypt.c",
    "blehost/ext/tinycrypt/src/bleutils.c",
    "blehost/ext/tinycrypt/src/cbc_mode.c",
    "blehost/ext/tinycrypt/src/ccm_mode.c",
    "blehost/ext/tinycrypt/src/cmac_mode.c",
    "blehost/ext/tinycrypt/src/ctr_mode.c",
    "blehost/ext/tinycrypt/src/ctr_prng.c",
    "blehost/ext/tinycrypt/src/ecc.c",
    "blehost/ext/tinycrypt/src/ecc_dh.c",
    "blehost/ext/tinycrypt/src/ecc_dsa.c",
    "blehost/ext/tinycrypt/src/ecc_platform_specific.c",
    "blehost/ext/tinycrypt/src/hmac.c",
    "blehost/ext/tinycrypt/src/hmac_prng.c",
    "blehost/ext/tinycrypt/src/sha256.c",
    "blehost/nimble/host/mesh/src/access.c",
    "blehost/nimble/host/mesh/src/adv.c",
    "blehost/nimble/host/mesh/src/beacon.c",
    "blehost/nimble/host/mesh/src/cfg_cli.c",
    "blehost/nimble/host/mesh/src/cfg_srv.c",
    "blehost/nimble/host/mesh/src/crypto.c",
    "blehost/nimble/host/mesh/src/friend.c",
    "blehost/nimble/host/mesh/src/glue.c",
    "blehost/nimble/host/mesh/src/health_cli.c",
    "blehost/nimble/host/mesh/src/health_srv.c",
    "blehost/nimble/host/mesh/src/light_model.c",
    "blehost/nimble/host/mesh/src/lpn.c",
    "blehost/nimble/host/mesh/src/mesh.c",
    "blehost/nimble/host/mesh/src/model_cli.c",
    "blehost/nimble/host/mesh/src/model_srv.c",
    "blehost/nimble/host/mesh/src/net.c",
    "blehost/nimble/host/mesh/src/nodes.c",
    "blehost/nimble/host/mesh/src/prov.c",
    "blehost/nimble/host/mesh/src/proxy.c",
    "blehost/nimble/host/mesh/src/settings.c",
    "blehost/nimble/host/mesh/src/shell.c",
    "blehost/nimble/host/mesh/src/testing.c",
    "blehost/nimble/host/mesh/src/transport.c",
    "blehost/nimble/host/services/gap/src/ble_svc_gap.c",
    "blehost/nimble/host/services/gatt/src/ble_svc_gatt.c",
    "blehost/nimble/host/src/ble_att.c",
    "blehost/nimble/host/src/ble_att_clt.c",
    "blehost/nimble/host/src/ble_att_cmd.c",
    "blehost/nimble/host/src/ble_att_svr.c",
    "blehost/nimble/host/src/ble_eddystone.c",
    "blehost/nimble/host/src/ble_gap.c",
    "blehost/nimble/host/src/ble_gattc.c",
    "blehost/nimble/host/src/ble_gatts.c",
    "blehost/nimble/host/src/ble_gatts_lcl.c",
    "blehost/nimble/host/src/ble_hs.c",
    "blehost/nimble/host/src/ble_hs_adv.c",
    "blehost/nimble/host/src/ble_hs_atomic.c",
    "blehost/nimble/host/src/ble_hs_cfg.c",
    "blehost/nimble/host/src/ble_hs_conn.c",
    "blehost/nimble/host/src/ble_hs_flow.c",
    "blehost/nimble/host/src/ble_hs_hci.c",
    "blehost/nimble/host/src/ble_hs_hci_cmd.c",
    "blehost/nimble/host/src/ble_hs_hci_evt.c",
    "blehost/nimble/host/src/ble_hs_hci_util.c",
    "blehost/nimble/host/src/ble_hs_id.c",
    "blehost/nimble/host/src/ble_hs_log.c",
    "blehost/nimble/host/src/ble_hs_mbuf.c",
    "blehost/nimble/host/src/ble_hs_misc.c",
    "blehost/nimble/host/src/ble_hs_mqueue.c",
    "blehost/nimble/host/src/ble_hs_periodic_sync.c",
    "blehost/nimble/host/src/ble_hs_pvcy.c",
    "blehost/nimble/host/src/ble_hs_shutdown.c",
    "blehost/nimble/host/src/ble_hs_startup.c",
    "blehost/nimble/host/src/ble_hs_stop.c",
    "blehost/nimble/host/src/ble_ibeacon.c",
    "blehost/nimble/host/src/ble_l2cap.c",
    "blehost/nimble/host/src/ble_l2cap_coc.c",
    "blehost/nimble/host/src/ble_l2cap_sig.c",
    "blehost/nimble/host/src/ble_l2cap_sig_cmd.c",
    "blehost/nimble/host/src/ble_monitor.c",
    "blehost/nimble/host/src/ble_sm.c",
    "blehost/nimble/host/src/ble_sm_alg.c",
    "blehost/nimble/host/src/ble_sm_cmd.c",
    "blehost/nimble/host/src/ble_sm_lgcy.c",
    "blehost/nimble/host/src/ble_sm_sc.c",
    "blehost/nimble/host/src/ble_store.c",
    "blehost/nimble/host/src/ble_store_util.c",
    "blehost/nimble/host/src/ble_uuid.c",
    "blehost/nimble/host/store/config/src/ble_store_config.c",
    "blehost/nimble/host/store/config/src/ble_store_nvram.c",
    "blehost/nimble/host/store/config/src/wm_bt_storage.c",
    "blehost/nimble/host/store/ram/src/ble_store_ram.c",
    "blehost/nimble/host/util/src/addr.c",
    "blehost/nimble/transport/uart/src/ble_hci_uart.c",
    "blehost/porting/w800/src/endian.c",
    "blehost/porting/w800/src/mem.c",
    "blehost/porting/w800/src/nimble_port.c",
    "blehost/porting/w800/src/npl_os_freertos.c",
    "blehost/porting/w800/src/os_mbuf.c",
    "blehost/porting/w800/src/os_mempool.c",
    "blehost/porting/w800/src/os_msys_init.c",
    "blehost/porting/w800/src/tls_nimble.c",
  ]
  include_dirs = [
    "blehost/ext/tinycrypt/include",
    "blehost/ext/tinycrypt/include/tinycrypt",
    "blehost/nimble/host/include",
    "blehost/nimble/host/include/host",
    "blehost/nimble/host/mesh/include",
    "blehost/nimble/host/mesh/include/mesh",
    "blehost/nimble/host/mesh/src",
    "blehost/nimble/host/porting/w800/include",
    "blehost/nimble/host/services/gap/include",
    "blehost/nimble/host/services/gap/include/services/gap",
    "blehost/nimble/host/services/gatt/include",
    "blehost/nimble/host/services/gatt/include/services/gatt",
    "blehost/nimble/host/src",
    "blehost/nimble/host/store/config/include",
    "blehost/nimble/host/store/config/include/store/config",
    "blehost/nimble/host/store/config/src",
    "blehost/nimble/host/store/ram/include",
    "blehost/nimble/host/store/ram/include/store/ram",
    "blehost/nimble/host/util/include",
    "blehost/nimble/host/util/include/host/util",
    "blehost/nimble/include",
    "blehost/nimble/include/nimble",
    "blehost/nimble/transport/uart/include/transport/uart",
    "blehost/nimble/transport/uart/include",
    "blehost/porting/w800/include",
    "blehost/porting/w800/include/hal",
    "blehost/porting/w800/include/log",
    "blehost/porting/w800/include/log_common",
    "blehost/porting/w800/include/logcfg",
    "blehost/porting/w800/include/mem",
    "blehost/porting/w800/include/modlog",
    "blehost/porting/w800/include/nimble",
    "blehost/porting/w800/include/os",
    "blehost/porting/w800/include/stats",
    "blehost/porting/w800/include/syscfg",
    "blehost/porting/w800/include/sysflash",
    "blehost/porting/w800/include/sysinit",
  ]
}
